--- a/content/u/now/1.md
+++ b/content/u/now/1.md
@@ -3,6 +3,14 @@ title: "1"
 date: 2022-06-25T17:06:31-04:00
 ---
 
-Right now, this week, I’m working on getting a new personal website up and running.
+Right now, this week, I’m working on getting this new personal website up and running.
 
+Today alone I was able to build the structure from scratch on Hugo. While it would have only been a couple of hours to do it with flat html, having it built as a hugo website gives me some great tools. Ones which I probably don't fully appreciate yet. 
 
+But any small feature that needs to be added is so simple. Just a little basic scripting. 
+
+I was very tempted to use a stock theme from the hugo website as well, but I was ultimately too stubborn to make those concessions. And as my reward I get to stick with PureCss. I'm no pro at it, but I'm familiar with the framework. 
+
+It amazes me how each time you do the "same" project, you improve on it in a significant way. Even though I'm a very amateur programmer, I've got this little system exactly how I want it. Every day all of my additions get pushed to the live version. 
+
+I'm quite pleased with that, haha.
