Tweaked the Table of Contents html and css, doesn't fall apart on small screens as much.

--- a/content/u/ntry/3.md
+++ b/content/u/ntry/3.md
@@ -55,6 +55,19 @@ I want a blog section for the pages to nestle into.
 
 ## Services to Provide
 
-## Contract & Practice
+The three main notary services: Acknowledgements, Jurats, and Verifications. 
 
-How do I actually provide those services?
+* Affidavits
+* Bill of Sale
+* Deed of Trust
+* Contract
+* Living Trust
+* Wills
+* Incorporation
+* PMA Documents
+* Sworn Statement
+* Release / Waiver
+* Common Law ID, Certificate of Identity
+* Legal Research
+* Do Public Record Requests on behalf of people
+
