Now we're cooking. Template is making more sense. In the process of turning contents' sections into a partial. Narrowing down what will work on the notary page.

--- a/content/u/ntry/2.md
+++ b/content/u/ntry/2.md
@@ -1,31 +1,16 @@
 ---
-title: "Services"
+title: "My Services"
 date: 2022-07-02
 draft: true
 ---
 
-Here I would like to dive more deeply into the services which I may provide. In my personal experience, there are large gaps of understanding in what we need notaries to do for us. As well as the types of documents they can handle. 
+There's an infinite variety of documents which a notary can notarize. That said, there are limited classes of documents and types of notarizations which are able to be executed.
 
-So hopefully this page may unify and clarify some scattered bits of information and knowledge on this topic. 
-
-## Classification of Services
-
-*Definitions from Bouvier's Law Dictionary*
-
-**Acknowledgment**, *conveyancing*.
-: The act of the grantor going before a competent officer, and declaring the instrument to be his _act or deed_, and desiring the same to be recorded as such. The certificate of the officer on the instrument, that such a declaration has been made to him, is also called an acknowledgment. The acknowledgment or due proof of the instrument by witnesses, must be made before it can be put upon record.
+Most documents fall into the category of an acknowledgement or an oath/affirmation. 
 
 1) Deed of Trust
 2) Financial Documents
 3) Contracts
 4) Agreements
 5) [True Copy](https://www.sosnc.gov/documents/forms/authentications/sample_documents/true_copy.pdf)
-
-**Jurat,** *practice.* 
-: That part of an affidavit where the officer certifies that the same was "sworn" before him.
-: The jurat is usually in the following form, namely "Sworn and subscribed before me, on the ____ day of _______, 1842, J. P. justice of the peace."
-
-**Jurata.**
-: A certificate placed at the bottom of an affidavit, declaring that the witness has been sworn or affirmed to the truth of the facts therein alleged. Its usual form is,: Sworn (or affirmed) before me, the ____ day of ____, 10 __." The Jurat. (q. v.)
-
-1) Affidavit
+6) Affidavit
