--- a/content/u/ntry/4.md
+++ b/content/u/ntry/4.md
@@ -5,8 +5,23 @@ draft: false
 ---
 
 This contract needs to be approved on 3 levels:
+
 * Legally. It needs to conform with the fundamental laws of this state, statutory law, and the administrative code.
+    * An Offer and Acceptance are the key elements of a contract.
+    * The offer must be communicated, 
+      complete, and accepted precisely. 
+    * *Morrison v. Parks, 1913.* 
+      “an acceptance is not effective unless it is
+        a) absolute and unconditional; 
+        b) identical with the terms of the offer; 
+        c) in the mode, at the place and within the 
+           time required by the offer.”
+    * Be clear and precise and **stick to the agreement** 
+      during its execution. If something must be changed, 
+      get that in writing. 
+
 * It needs to be, if not endorsed, accepted by the Secr. of State's office as not being in conflict with her formal (and maybe informal) code(s) of conduct.
+
 * And finally, it needs to be accepted by the "court" of public opion. While I don't think I should flaunt what I'm doing on the facebook group, I do think that a small portion of these concepts should be public. 
 
 [ Insert a draft of the contract here ] 
