--- a/content/u/ntry/5.md
+++ b/content/u/ntry/5.md
@@ -4,3 +4,14 @@ date: 2022-07-01T20:34:24-04:00
 draft: true
 ---
 
+North Carolina Secretary of State, 
+
+As I pursue my Notarial Commission I would like some clarity on a topic. 
+
+In the 2016 version of your handbook you make it clear that Signing Agents are an unregulated profession. In a similar vein
+
+What are the ethics and/or legalities of the following situations?
+
+* Notarizing a document for anyone who has directly hired me.
+* An individual approaches me with a contract to travel to his location, because I am a notary. I travel to him, complete a notarial act, and am compensated for my travel expenses. 
+
