Alright this is a much better choice for the layout of the notary page.

--- a/content/u/ntry/1.md
+++ b/content/u/ntry/1.md
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started"
 date: 2022-06-25T16:12:23-04:00
-draft: true
+draft: false
 ---
 
 So it turns out that taking the notary course at a community college, before lots of study, was the best way to do it. Instant motivation, and it was an easy test. Got that knocked out and now I can move forward with the other parts. 
