--- a/content/u/ntry/2.md
+++ b/content/u/ntry/2.md
@@ -1,7 +1,7 @@
 ---
 title: "My Services"
 date: 2022-07-02
-draft: true
+draft: false
 ---
 
 There's an infinite variety of documents which a notary can notarize. That said, there are limited classes of documents and types of notarizations which are able to be executed.
