--- a/content/u/ntry/7.md
+++ b/content/u/ntry/7.md
@@ -1,7 +1,7 @@
 ---
 title: "On Services"
 date: 2022-07-02
-draft: true
+draft: false
 ---
 
 Here I would like to dive more deeply into the services which a north carolina notary may provide. In my personal experience, there are large gaps of understanding in what we need notaries to do for us. As well as the types of documents they can handle. 
