--- a/content/u/ntry/9.md
+++ b/content/u/ntry/9.md
@@ -1,7 +1,7 @@
 ---
 title: "Work With Me"
 date: 2022-07-03T11:23:19-04:00
-draft: true
+draft: false
 ---
 
 In addition to general notary work, I also provide services for premium document handling. Where I offer my research and expertise to assist you in your goals. 
