--- a/content/u/ntry/5.md
+++ b/content/u/ntry/5.md
@@ -1,7 +1,7 @@
 ---
 title: "Letter To Secretary of State"
 date: 2022-07-01T20:34:24-04:00
-draft: true
+draft: false
 ---
 
 North Carolina Secretary of State, 
