--- a/content/u/ntry/6.md
+++ b/content/u/ntry/6.md
@@ -1,7 +1,7 @@
 ---
 title: "Prerequisites to Operating as Notary"
 date: 2022-07-02T10:45:13-04:00
-draft: true
+draft: false
 ---
 
 ## My Own Agent
