Stylized index section for the Notary & Document Svc pages

--- a/content/v/dsvc/9.md
+++ b/content/v/dsvc/9.md
@@ -4,8 +4,7 @@ date: 2022-07-03T11:23:19-04:00
 draft: false
 ---
 
-In addition to general notary work, I also provide various [document services](/v/dsvc). Where I offer my research and expertise to assist you in your goals. 
+In addition to my document services, I also do general [notary work](/u/ntry).
 
 If you would like to learn more about that please contact me for more information and a free consultation. 
-
 
