some basic formatting. Fixed the heading at top of the page. Cohesive linking is better than isolating everything.

--- a/content/u/cmty/1.md
+++ b/content/u/cmty/1.md
@@ -1,11 +1,29 @@
 ---
-title: "What Works?"
+title: "What is Community?"
 date: 2022-06-25T16:30:02-04:00
 ---
 
-Based on my current location, my community is everyone within this radius:
+As per the unwritten rules of *Ye Sacred Art of Blogging*, I must begin this opinion piece with a proper definition.
 
-<img 
-  class="pure-img" 
-  alt="half hour driving radius around southern kernersville" 
-  src="/img/kville-radius.jpg">
+> **community,** *noun*
+> A society of people, having common rights and privileges, or common interests, civil, political or ecclesiastical; or living under the same laws and regulations. This word may signify a commonwealth or state, a body politic, or a particular society or order of men within a state, as a community of monks; and it is often used for the public or people in general, without very definite limits.
+<br> <br>
+> &ndash; *Webster's Dictionary, 1828.*
+
+Now in our current usage "community" tends to take on more of a geographical sense, unless the context suggests otherwise. 
+
+
+<figure>
+  <img 
+    class="pure-img" 
+    alt="half hour driving radius around southern kernersville" 
+    src="/img/kville-radius.jpg">
+</figure>
+
+But details aside, the real reason I'm pondering this topic is to begin to answer the more important question of, "How do we strengthen our communities?"
+
+## In The "New" South..
+..community has become little more than loose memberships to various corporations. Gym memberships, Church, Charities, Social Clubs, Fire Departments, Homeowner's Associations, Youth Programs, Reward Programs, Political Organizations, etc. We still see the occasional neighborhood cookouts, large family gatherings, and interest groups which have formed organically; these have all had a resurgence. But ultimately we are nowhere near regaining the communal aspects of the society which this land once enjoyed. 
+
+Now, let's get one thing clear. Every age has its pros and cons, its virtues and its sins. Yet we owe it to our descendants to resurrect what we can, create what we can't, and evolve what needs to grown. 
+
