--- a/content/u/cmty/1.md
+++ b/content/u/cmty/1.md
@@ -27,3 +27,6 @@ But details aside, the real reason I'm pondering this topic is to begin to answe
 
 Now, let's get one thing clear. Every age has its pros and cons, its virtues and its sins. Yet we owe it to our descendants to resurrect what we can, create what we can't, and evolve what needs to grown. 
 
+## Vision
+
+This leads into another question, "What is the *correct* vision?"
