--- a/content/u/ntry/9.md
+++ b/content/u/ntry/9.md
@@ -4,8 +4,8 @@ date: 2022-07-03T11:23:19-04:00
 draft: false
 ---
 
+The current statutory limit on notary fees is $5 per signature. Because of that I am only able to travel {{<notary-charge>}} to provide that service. I am often in Greensboro, High Point, and sometimes in Winston. If you have multiple signatures in a document, or multiple documents to notarize, I would consider travelling further. 
+
 In addition to general notary work, I also provide various [document services](/v/dsvc). Where I offer my research and expertise to assist you in your goals. 
 
-If you would like to learn more about that please contact me for more information and a free consultation. 
-
-
+In an effort to explain everything it's possible that parts of this page may be unclear. Feel free to contact me with any questions or comments you have.
