--- a/content/v/dsvc/9.md
+++ b/content/v/dsvc/9.md
@@ -4,7 +4,9 @@ date: 2022-07-03T11:23:19-04:00
 draft: false
 ---
 
-In addition to my document services, I also do general [notary work](/u/ntry).
+To work with me as your provider of Document Services you must hire me as a contractor and then you may call upon my services as you need them. 
 
-If you would like to learn more about that please contact me for more information and a free consultation. 
+If you would like to learn more please let me know you're interested over email or by calling me. 
+
+In addition to my document services, I also do general [notary work](/u/ntry).
 
