Been a minute. Being homeless sucked lol. Here's some small content updates. And oh yeah, a custom image option below the title of a single page.

--- a/content/v/lglr/2.md
+++ b/content/v/lglr/2.md
@@ -1,8 +1,98 @@
 ---
 title: "An Old 'Friend' Came Calling"
 date: 2022-07-18T19:37:46-04:00
-draft:true
+draft: true
 ---
 
 
 I knew, I knew, and I knew, that when she called at Thanksgiving, nothing good would come from that call. 
+
+> Beware the average man, the average woman. Beware their love, their love is average, but there is genius in their hatred. There is enough genious in their hatred to kill you, to kill anybody.  
+>
+> Not wanting solitude, not understanding solitude, they will attempt to destry anything that differs from their own. 
+>
+> Not being able to create art, they will not understand art. They will consider their failure as creators, only as a failure of the world.
+>
+> &ndash; Charles Bukowski
+
+Had this advice come from a person I trusted, perhaps this all could have been avoided. Still, I'm a stubborn person. It's hard for me to let injustice lay still. 
+
+-------
+
+First I need to find out the source of this investigation. 
+
+Microsoft and Facebook(Instagram) are the most important points. I don't think snapchat is relevant. They are currently trying to find the most extreme things to charge me with. 
+
+> The Fourth Amendment's requirements don't apply when a person doesn't have a "legitimate expectation of privacy" in the place or thing searched. If there isn't an expectation of privacy, then the Fourth Amendment doesn't come into play, and officers conducting a search don't have to meet its requirements.
+
+Prosecution must prove that each element of the search warrant was proper. 
+
+--------
+
+# Private
+
+## Facebook
+
+Legal, possible numbers.
+
+* (650) 838-8006
+* (650) 473-9959
+
+## Microsoft
+
+Follow California Process Service. 
+
+(425) 722-1299
+
+
+# District Courts
+
+## Hadley
+* 116 Russell St.
+* 413.748.7838
+## Holyoke
+* 20 Court Plz.
+* 413.538.9710
+
+## Hampshire Co. 
+### Superior Court
+* 15 Gothic St, Northampton.
+* 413.584.5810
+### Sheriff
+* Sheriff Patrick J. Cahillane
+* Letrial Tillman, Correctional Officer
+    
+## Hampden Co. 
+### Sheriff
+* William S. Patrolman, Belchertown. Franklin Co House of Cor.
+* Stephen Rose, Liet / Deputy
+* Peter Konstantakos, Deputy
+* Mike Mastriani, Retired Sheriff's Dept.
+* John Vanasse, Lieutenant. Florence. 
+* Gregory Santos. Trooper at State Police
+* Juan Nunez, Law Enf
+* John McGrath. Sheriff / Task Force, FBI
+* Daniel Covington, Law Enf
+* Lonny Dakin, Retired Chief, Deputy. 
+* Sheriff Nicholas Cocchi.
+
+It would appear that the position of Sheriff in Massachusetts has more to do with managing detention centers, just as a CEO is primarily a job of managing finances. I'm not sure if that's a bad thing, but it certainly suggests a more military structure. 
+
+Whoever is conducting this investigation, that is a weak point to target. 
+
+-------
+
+Oddly, part of my lack of negative feelings, is that I'd rather address this issue in front of the world, than spend anymore time in the shadow of that witch. 
+
+
+
+
+> There is only one way to salvation, and that is to make yourself responsible for all men's sins. As soon as you make yourself responsible in all sincerity for everything and for everyone, you will see at once that this is really so, and that you are in fact to blame for everyone and for all things.
+>
+> &ndash; Fyodor Dostoevsky
+
+------
+
+*update: July 31st, 2022*
+
+Well that was an unfortunate and depressing twist. This had nothing to do with that relationship, but everything to do with a prior indiscretion. The good news is that I am mentally prepared to fight it, the bad news is that it is still simply an investigation that I have no access to. Should be able to meet with the Sheriff's Dep this week. 
